# zendns

./: .gitignore  Cargo.toml  DOCS.md  README.md  example.config.toml  test.config.toml
.github/workflows/: ci.yml
src/: blocklist.rs  config.rs  main.rs
src/resolver/: doh.rs  dot.rs  mod.rs  udp.rs
