[package]
name = "zendns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
dashmap = "5"
trust-dns-proto = { version = "0.23", features = ["dnssec"] }
trust-dns-resolver = { version = "0.23", features = ["dnssec"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
dirs = "5"
tokio-rustls = "0.24"
